[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cbfpy"
version = "0.0.3"
description = "Control Barrier Functions in Python"
authors = [{ name = "Daniel Morton", email = "danielpmorton@gmail.com" }]
readme = "README.md"
keywords = ["control", "barrier", "function", "CBF", "Jax"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "jax",  # 0.4.30 recommended for best CPU performance
    "jaxlib",  # 0.4.30 recommended for best CPU performance
    "qpax",
]

[project.urls]
Documentation = "https://danielpmorton.github.io/cbfpy/"
Repository = "https://github.com/danielpmorton/cbfpy/"

[project.optional-dependencies]
examples = [
    # Note: older versions of Pybullet have trouble with numpy 2.0
    "pybullet>=3.2.7",
    "pygame",
    # "gym_pybullet_drones @ git+https://github.com/danielpmorton/gym-pybullet-drones.git",
    "wheel",
    "matplotlib",
]
dev = ["mkdocs-material", "mkdocstrings[python]", "pylint", "black"]
all = [
    "pybullet>=3.2.7",
    "pygame",
    # "gym_pybullet_drones @ git+https://github.com/danielpmorton/gym-pybullet-drones.git",
    "wheel",
    "matplotlib",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pylint",
    "black",
]

[tool.setuptools.packages.find]
exclude = ["artifacts", "images"]
